自动化测试

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,8 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
+          rm -rf /root/realworld-nuxtjs/
+          mkdir /root/realworld-nuxtjs
           cd /root/realworld-nuxtjs 
           wget https://github.com/zimeng303/realworld-nuxt/releases/latest/download/release.tgz -O release.tgz
           tar -zxvf release.tgz
