--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,8 @@ jobs:
       uses: actions/upload-release-asset@master
       env:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
-      with:
-      	# release 上传路径、名称配置
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
+      with:      	
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # release 上传路径、名称配置
         asset_path: ./release.tgz
         asset_name: release.tgz
         asset_content_type: application/x-tgz
